First build for the Greek Wiktionary. Build by running "ReadStripped SD Greek runall.cmd". For now, the language names and POS types are in English in the output.