@@ -7,16 +7,27 @@ rem 2013-Dec-10 LANGID not relayed to program
 rem 2014-08-09 Java 8
 rem set JAVA_HOME=C:\PROGRA~1\Java\jdk1.8.0_102
 rem
-rem Change EDITION to match with the Wiktionary edition you have downloaded
-set EDITION=20161101
+set DICT=F:\Temp\wiktionary-dumps
+set JAR_DIR=G:\Dropbox\Dictionary\wikt
+set JAVA_HOME=C:\Usr\openjdk-16_windows-x64_bin\jdk-16
+set OUT_DIR=X:\Dropbox\Dictionary\wikt\Stardict\OwnStarDict
+set WIKT=C:\Users\korho\git\wiktionary-convert-no-db\wikt2xmlfull
+rem
+rem Pass as param the EDITION of the Wiktionary edition you have downloaded
+set EDITION=%1
 
-set LANG=%1
 rem SET LANG="ALL"
-set LANGID=%2
+set LANG=%2
+
+rem set LANGCODE=Western
+set LANGCODE=%3
+
+rem set LANGID=%3
 rem SET LANGID=ALL
-set METADATAENGLISH=%3
-set LANGCODE=Western
-set ONLYLANGUAGES=%4
+
+set METADATAENGLISH=%4
+rem Only languages supplied in a language file are to be processed
+set ONLYLANGUAGES=%5
 
 SET X=
 FOR /F "skip=1 delims=" %%x IN ('wmic os get localdatetime') DO IF NOT DEFINED X SET X=%%x
@@ -28,18 +39,23 @@ SET DATE.MINUTE=%X:~10,2%
 SET DATE.SECOND=%X:~12,2%
 SET NOW=%DATE.YEAR%-%DATE.MONTH%-%DATE.DAY%-%DATE.HOUR%-%DATE.MINUTE%-%DATE.SECOND%
 
-SET PROGDIR=%WIKT%
-SET PROG=%PROGDIR%\ReadStripped.jar
+SET PROG=%JAR_DIR%\ReadStripped.jar
+if "%LANGCODE%" == "Western" SET PROG="%PROGDIR%\ReadStripped_%LANGCODE%.jar"
 SET JCLASS=wiktionary\to\xml\full\ReadStripped
 SET JAVA="%JAVA_HOME%\bin\java.exe"
 SET INFILE=%DICT%\enwiktionary-%EDITION%-pages-articles.xml\stripped-ALL.xml
-SET OUTFILE=%WIKT%\StarDict\OwnStardict\wikt-en-Western-%NOW%.txt
+rem SET INFILE="%DICT%\%LANGCODE%wiktionary-%EDITION%-pages-articles.xml\stripped-ALL.xml"
+if "%LANG%" == "ALL" SET INFILE="%DICT%\enwiktionary-%EDITION%-pages-articles.xml\stripped-ALL.xml"
+
+SET OUTFILE="%OUT_DIR%\wikt-%LANG%-%LANGCODE%-%NOW%.txt"
+if "%LANG%" == "ALL" SET OUTFILE="%OUT_DIR%\wikt-en-%LANGCODE%-%NOW%.txt"
+
 SET UTF8=-Dfile.encoding=UTF-8
 SET MEM=-Xmx2600M
 SET STCK=-Xss400M
 SET OUTTYPE=Stardict
 
-cd %PROGDIR%
+cd %JAR_DIR%
 chcp 65001
 
 echo PROG: %PROG%
@@ -48,8 +64,8 @@ echo OUTFILE: %OUTFILE%
 echo LANG: %LANG%
 echo MET: %METADATAENGLISH%
 echo OUTTYPE: %OUTTYPE%
-
-rem -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit 
+echo .
+echo %JAVA% %UTF8% %MEM% %STCK% -jar %PROG% %INFILE% %OUTFILE% %LANG% %METADATAENGLISH% %OUTTYPE% 0 %LANGCODE% %ONLYLANGUAGES%
 %JAVA% %UTF8% %MEM% %STCK% -jar "%PROG%" %INFILE% %OUTFILE% %LANG% %METADATAENGLISH% %OUTTYPE% 0 %LANGCODE% %ONLYLANGUAGES%
 if %ERRORLEVEL% GTR 0 goto :virhe
 echo Ready
